bk_ida/gccida/c2/mtherr
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mtherr/src/real.c:6307:13: error: use of undeclared identifier 'off_702390'
warning( ( &off_702390)[code - 1], v3); 
            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mtherr/src/obj/real.o] Error 1
